--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,22 +7,47 @@
 		"ghcr.io/devcontainers/features/azure-cli:1": {
 			"installBicep": true
 		},
-        "ghcr.io/devcontainers/features/github-cli": {},
-		"ghcr.io/devcontainers/features/powershell:1": {}
+		"ghcr.io/azure/azure-dev/azd:0": {},
+		"ghcr.io/devcontainers/features/powershell:1": {},
+		"ghcr.io/devcontainers/features/dotnet": {},
+		"ghcr.io/devcontainers/features/github-cli": {},
+		"ghcr.io/devcontainers/features/python": {},
 	},
 	"customizations": {
 		"vscode": {
-			"settings": {},
+			"settings": {
+				"editor.stickyScroll.defaultModel": "outlineModel",
+				"editor.stickyScroll.enabled": true,
+				"notebook.stickyScroll.enabled": true,
+				"editor.codeActionsOnSave": {
+					"source.fixAll": "explicit",
+					"source.organizeImports": "explicit"
+				}
+			},
 			"extensions": [
+				"aaron-bond.better-comments",
 				"eamodio.gitlens",
-				"ms-vscode.powershell",
+				"EditorConfig.EditorConfig",
+				"foxundermoon.shell-format",
+				"GitHub.copilot",
+				"lehoanganh298.json-lines-viewer",
+				"mechatroner.rainbow-csv",
+				"mhutchie.git-graph",
+				"ms-azuretools.azure-dev",
 				"ms-azuretools.vscode-bicep",
+				"ms-azuretools.vscode-docker",
+				"ms-vscode.powershell",
+				"redhat.vscode-yaml",
+				"yzhang.markdown-all-in-one"
 			]
 		}
 	},
-    "onCreateCommand": "bash ./.devcontainer/onCreateCommand.sh",
-    "postCreateCommand": "bash ./.devcontainer/postCreateCommand.sh",
-    "postStartCommand": "bash ./.devcontainer/postStartCommand.sh",
+    "hostRequirements": {
+        "gpu": "optional"
+    },
+	"onCreateCommand": "bash ./.devcontainer/onCreateCommand.sh",
+	"postCreateCommand": "bash ./.devcontainer/postCreateCommand.sh",
+	"postStartCommand": "bash ./.devcontainer/postStartCommand.sh",
 	"runArgs": [
 		"--env-file",
 		".devcontainer/devcontainer.env",
