Add what if script, update readme, add sql server password

--- a/.devcontainer/devcontainer.env
+++ b/.devcontainer/devcontainer.env
@@ -1,1 +1,4 @@
 MY_VAR=my_value
+
+# Tell azd to use the Bicep installed with Azure CLI instead of downloading its own
+AZD_BICEP_USE_BINARY_FROM_PATH=true
